<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".Activities.Authentication.Home">


        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


            <LinearLayout
                    android:id="@+id/linearLayout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorBackground"
                    android:gravity="center"
                    android:orientation="vertical">

                <ImageView
                        android:id="@+id/logo"
                        android:layout_width="128dp"
                        android:layout_height="128dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="15dp"
                        android:background="@drawable/circle"
                        android:padding="10dp"
                        android:src="@drawable/strategy"/>

            </LinearLayout>


            <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_below="@+id/linearLayout1"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="-10dp"
                    android:rotation="45"
                    android:src="@drawable/square"/>


            <ImageView
                    android:id="@+id/notification"
                    android:layout_width="50dp"
                    android:layout_height="36dp"
                    android:layout_below="@+id/linearLayout1"
                    android:onClick="openDrawerAction"
                    android:layout_marginTop="-92dp"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/ic_menu_black_24dp"/>


            <RelativeLayout android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/colorBackground"
                            android:layout_marginTop="10dp"
                            android:layout_below="@+id/imageView1">

                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="100dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp">


                    <LinearLayout android:layout_width="match_parent"
                                  android:layout_marginTop="20dp"
                                  android:layout_height="match_parent"
                                  android:orientation="horizontal">

                        <LinearLayout android:layout_width="130dp"
                                      android:layout_height="140dp"
                                      android:clickable="true"
                                      android:onClick="OpenMaterials"
                                      android:padding="10dp"
                                      android:elevation="5dp"
                                      android:layout_marginLeft="10dp"
                                      android:layout_weight="1"
                                      android:orientation="vertical"
                                      android:background="@drawable/shape">

                            <FrameLayout android:layout_width="match_parent"
                                         android:layout_height="wrap_content">
                                <ImageView
                                        android:layout_width="30dp"
                                        android:layout_height="30dp"
                                        android:layout_marginTop="-10dp"
                                        android:rotation="180"
                                        app:srcCompat="@drawable/ic_triangle_right_background"/>

                                <ImageView android:layout_width="65dp"
                                           android:layout_height="65dp"
                                           android:layout_gravity="center"
                                           android:src="@drawable/ic_apps_black_24dp"
                                         />

                            </FrameLayout>

                            <TextView android:layout_width="111dp"
                                      android:layout_height="50dp"
                                      android:layout_gravity="center"
                                      android:gravity="center"
                                      android:layout_marginTop="5dp"
                                      android:textColor="@color/black"
                                      android:textSize="16sp"
                                      app:fontFamily="Arial"
                                      android:text="@string/Materials"/>


                        </LinearLayout>

                        <LinearLayout android:layout_width="80dp"
                                      android:layout_weight="1"
                                      android:layout_height="wrap_content">

                        </LinearLayout>

                        <LinearLayout android:layout_width="130dp"
                                      android:layout_height="140dp"
                                      android:padding="10dp"
                                      android:elevation="5dp"
                                      android:layout_weight="1"
                                      android:onClick="OpenChat"
                                      android:orientation="vertical"
                                      android:background="@drawable/shape">

                            <FrameLayout android:layout_width="match_parent"
                                         android:layout_height="wrap_content">
                                <ImageView
                                        android:layout_width="30dp"
                                        android:layout_height="30dp"
                                        android:layout_marginTop="-10dp"
                                        android:rotation="180"
                                        app:srcCompat="@drawable/ic_triangle_right_background"/>
                                <ImageView android:layout_width="65dp"
                                           android:layout_height="65dp"
                                           android:layout_gravity="center"
                                           android:src="@drawable/ic_message_black_24dp"
                                />
                            </FrameLayout>

                            <TextView android:layout_width="113dp"
                                      android:layout_height="50dp"
                                      android:layout_gravity="center"
                                      android:textColor="@color/black"
                                      android:layout_marginTop="5dp"
                                      android:gravity="center"
                                      android:textSize="16sp"
                                      android:text="@string/Messages"/>


                        </LinearLayout>
                    </LinearLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                                  android:layout_height="match_parent"
                                  android:orientation="horizontal"
                                  android:layout_marginTop="80dp"
                                  android:layout_marginBottom="50dp">

                                <LinearLayout android:layout_width="80dp"
                                    android:layout_weight="1"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent"
                                    android:layout_height="wrap_content">

                                </LinearLayout>

                        <LinearLayout
                                android:layout_width="130dp"
                                android:layout_height="140dp"
                                android:background="@drawable/shape"
                                android:elevation="5dp"
                                android:onClick="OpenExams"
                                android:orientation="vertical"
                                android:padding="10dp"

                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent">

                            <FrameLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content">

                                <ImageView
                                        android:layout_width="30dp"
                                        android:layout_height="30dp"
                                        android:layout_marginTop="-10dp"
                                        android:rotation="180"
                                        app:srcCompat="@drawable/ic_triangle_right_background" />

                                <ImageView
                                        android:layout_width="65dp"
                                        android:layout_height="65dp"
                                        android:layout_gravity="center"
                                        android:src="@drawable/ic_import_contacts_black_24dp" />

                            </FrameLayout>

                            <TextView
                                    android:layout_width="113dp"
                                    android:layout_height="50dp"
                                    android:layout_gravity="center"
                                    android:layout_marginTop="5dp"
                                    android:gravity="center"
                                    android:text="@string/Exams"
                                    android:textColor="@color/black"
                                    android:textSize="16sp" />


                        </LinearLayout>


                    </androidx.constraintlayout.widget.ConstraintLayout>


                </LinearLayout>

            </RelativeLayout>

        </RelativeLayout>



</ScrollView>

